<resources>
    <string name="app_name">Agricontrole</string>
    <string name="app_logout">Sair</string>
    <string name="title_activity_login">Bem Vindo - Agricontrole</string>
    <string name="action_settings2">Configurações</string>


    <!-- Login -->
    <string name="login_txtEmail">Email:</string>
    <string name="login_txtPassword">Senha:</string>
    <string name="login_btnLogin">Entrar</string>
    <string name="login_ckbConected">Manter conectado?</string>
    <string name="login_btnSignUp">Cadastrar-se</string>
    <string name="login_help">Ajuda</string>

    <!-- SignUp -->
    <string name="signUp_txtName">Nome</string>
    <string name="signUp_txtSurename">Sobrenome</string>
    <string name="signUp_txtCellphone">Celular</string>
    <string name="signUp_txtCellphone2">Telefone</string>
    <string name="signUp_Email">Email</string>
    <string name="signUp_txtEmail">Email</string>
    <string name="signUp_txtPassword">Senha</string>
    <string name="signUp_btnSave">Cadastrar</string>

    <!-- Validations -->
    <string name="login_valEmail">Usuário obrigatório.</string>
    <string name="login_valPassword">Senha obrigatório.</string>
    <string name="campo_obrigatorio">Campo obrigatório.</string>

    <!-- Messages -->
    <string name="msg_login_incorreto">Usuário e/ou senha inválido.</string>
    <string name="title_activity_cad_usuario">Cadastro de Usuários</string>
    <string name="hello_world">Hello world!</string>
    <string name="mensagem_cadastro">Registro cadastrado com sucesso!</string>
    <string name="mensagem_atualizar">Registro atualizado com sucesso!</string>
    <string name="mensagem_erro">Erro ao salvar!</string>

    <!-- Users -->
    <string name="usuario_txtNane">Nome</string>
    <string name="usuario_txtEmail">Login</string>
    <string name="usuario_txtPassword">Senha</string>
    <string name="list_users">Lista de usuários</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_auto_login">AutoLoginActivity</string>
    <string name="agronomist_btnSave">Atualizar dados</string>

    <!-- Farm Menu -->
    <string name="main_logout">Sair</string>
    <string name="current_user_name">Nome do Usuário</string>
    <string name="current_user_email">emailusuario@agricontrole.com</string>

    <!-- Farm form -->
    <string name="farm_txtName">Nome da Fazenda</string>
    <string name="farm_txtOwner">Proprietário</string>
    <string name="farm_txtAddress">Endereço</string>
    <string name="farm_txtCity">Cidade</string>
    <string name="farm_txtState">Estado</string>
    <string name="farm_btnSave">Cadastrar Fazenda</string>

    <string name="title_activity_farm">Fazendas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_agronomist">Perfil do Agrônomo</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_farm">CreateFarm</string>
    <string name="title_activity_farm_management">Gerenciamento da Fazenda</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_create_period">CreatePeriodActivity</string>

    <!-- Period form -->
    <string name="period_txtName">Nome da Safra</string>
    <string name="period_txtFarm">Nome da Fazenda</string>
    <string name="period_btnSave">Cadastrar Safra</string>
    <string name="title_activity_create_plot">CreatePlotActivity</string>

    <!-- Plot form -->
    <string name="plot_txtName">Nome do Talhão</string>
    <string name="plot_txtArea">Área do Talhão (ha)</string>
    <string name="plot_txtPeriod">Safra</string>
    <string name="plot_btnSave">Cadastrar Talhão</string>

    <!-- Farm Management -->
    <string name="title_stock">Estoque</string>
    <string name="title_period">Safras</string>


    <!-- Planting -->
    <string name="planting_txtType">Tipo de Plantio</string>
    <string name="planting_txtDate">Data de Plantio</string>
    <string name="planting_txtPopulation">População</string>
    <string name="planting_txtEmergencyDate">Data de Emergência</string>
    <string name="planting_txtHarvestDate">Data de Colheita</string>
    <string name="planting_btnSave">Cadastrar Plantio</string>
    <string name="typeHint">Milho</string>
    <string name="dateHint">01012000</string>
    <string name="populationHint">12.45</string>
    <string name="planting_population">População: N/D</string>
    <string name="planting_emergencyDate">Data de Emergência: N/D</string>
    <string name="planting_harvestDate">Data de Colheita: N/D</string>
    <string name="title_activity_planting">Plantios</string>
    <string name="title_activity_create_planting">Cadastro de Plantio</string>

    <!-- Product -->
    <string name="title_activity_product">Produtos</string>
    <string name="title_activity_create_product">CreateProductActivity</string>
    <string name="product_txtName">Nome do Produto</string>
    <string name="product_txtQuantity">Quantidade</string>
    <string name="product_txtExpirationDate">Data de Validade</string>
    <string name="product_txtCategory">Categoria</string>
    <string name="product_btnSave">Cadastrar Produto</string>

    <!-- Product Application -->
    <string name="title_activity_product_application">Aplicações de Produtos</string>
    <string name="application_date">Data de Aplicação</string>
    <string name="application_product">Produto</string>
    <string name="application_btnSave">Cadastrar Aplicação</string>


    <!-- Farm Drawer -->
    <string name="account">Gerenciar Conta</string>
    <string name="create_farm">Cadastrar Fazenda</string>
    <string name="edit_account">Editar Conta</string>
    <string name="delete_account">Deletar Conta</string>


    <string name="title_activity_create_product_application">CreateProductApplicationActivity
    </string>
    <string name="title_activity_update_product_application">UpdateProductApplicationActivity
    </string>
    <string name="title_activity_create_category">CreateCategoryActivity</string>

    <!-- Category -->
    <string name="category_txtUnitType">Unidade de Medida</string>
    <string name="category_txtName">Nome da Categoria</string>
    <string name="category_btnSave">Cadastrar Categoria</string>
    <string name="create_category">Cadastrar Categoria</string>


</resources>
