<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_farm"
            android:icon="@drawable/ic_tractor_black"
            android:title="@string/create_farm" />
        <item
            android:id="@+id/nav_create_product"
            android:icon="@drawable/ic_fuel_black"
            android:title="Gallery" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_edit"
                android:icon="@drawable/ic_rename_box"
                android:title="@string/edit_account" />
            <item
                android:id="@+id/nav_delete"
                android:icon="@drawable/ic_delete_forever"
                android:title="@string/delete_account" />
        </menu>
    </item>

</menu>
