<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePlantingActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:mask="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context="com.filipe.agricontrole.UpdatePlantingActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:minHeight="112dp"
                android:src="@mipmap/ic_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planting_txtType"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/planting_edtType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColorHighlight="@android:color/holo_green_dark"
                android:textColorLink="@android:color/holo_green_dark"
                android:textCursorDrawable="@android:color/holo_green_dark"
                android:textIsSelectable="false"
                android:hint="@string/typeHint"
                android:textColorHint="@color/gray_btn_bg_color"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planting_txtDate"
                android:textStyle="bold" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/planting_edtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColorHighlight="@android:color/holo_green_dark"
                android:textColorLink="@android:color/holo_green_dark"
                android:textCursorDrawable="@android:color/holo_green_dark"
                android:textIsSelectable="false"
                android:inputType="date"
                android:hint="@string/dateHint"
                android:textColorHint="@color/gray_btn_bg_color"
                mask:allowed_chars="1234567890"
                mask:mask="##/##/####"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planting_txtPopulation"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/planting_edtPopulation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColorHighlight="@android:color/holo_green_dark"
                android:textColorLink="@android:color/holo_green_dark"
                android:textCursorDrawable="@android:color/holo_green_dark"
                android:textIsSelectable="false"
                android:inputType="numberDecimal"
                android:hint="@string/populationHint"
                android:textColorHint="@color/gray_btn_bg_color"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planting_txtEmergencyDate"
                android:textStyle="bold" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/planting_edtEmergencyDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColorHighlight="@android:color/holo_green_dark"
                android:textColorLink="@android:color/holo_green_dark"
                android:textCursorDrawable="@android:color/holo_green_dark"
                android:textIsSelectable="false"
                android:inputType="date"
                android:textColorHint="@color/gray_btn_bg_color"
                mask:allowed_chars="1234567890"
                mask:mask="##/##/####"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planting_txtHarvestDate"
                android:textStyle="bold" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/planting_edtHarvestDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColorHighlight="@android:color/holo_green_dark"
                android:textColorLink="@android:color/holo_green_dark"
                android:textCursorDrawable="@android:color/holo_green_dark"
                android:textIsSelectable="false"
                android:inputType="date"
                android:textColorHint="@color/gray_btn_bg_color"
                mask:allowed_chars="1234567890"
                mask:mask="##/##/####"/>

            <Button
                android:id="@+id/period_btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/holo_green_dark"
                android:onClick="updatePlanting"
                android:text="@string/planting_btnSave"
                android:textColor="#FFF"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>