<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    tools:context="com.filipe.agricontrole.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:minHeight="112dp"
            app:srcCompat="@mipmap/ic_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp_txtName"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signUp_edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textColorHighlight="@android:color/holo_green_dark"
            android:textColorLink="@android:color/holo_green_dark"
            android:textCursorDrawable="@android:color/holo_green_dark"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp_txtSurename"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signUp_edtSurename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textColorHighlight="@android:color/holo_green_dark"
            android:textColorLink="@android:color/holo_green_dark"
            android:textCursorDrawable="@android:color/holo_green_dark"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp_txtCellphone"
            android:textStyle="bold" />

        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/signUp_edtCellphone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="phone"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textColorHighlight="@android:color/holo_green_dark"
            android:textColorLink="@android:color/holo_green_dark"
            android:textCursorDrawable="@android:color/holo_green_dark"
            android:textIsSelectable="false"
            mask:allowed_chars="1234567890"
            mask:mask="+55(##)#####-####"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp_Email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signUp_edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textColorHighlight="@android:color/holo_green_dark"
            android:textColorLink="@android:color/holo_green_dark"
            android:textCursorDrawable="@android:color/holo_green_dark"
            android:textIsSelectable="false"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp_txtPassword"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signUp_edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:inputType="textPassword"
            android:textColorHighlight="@android:color/holo_green_dark"
            android:textColorLink="@android:color/holo_green_dark"
            android:textCursorDrawable="@android:color/holo_green_dark" />

        <Button
            android:id="@+id/signUp_btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_green_dark"
            android:onClick="save"
            android:text="@string/signUp_btnSave"
            android:textColor="#FFF"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
