<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="com.filipe.agricontrole.UpdateFarmActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:minHeight="112dp"
                android:src="@mipmap/ic_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/farm_txtName"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/farm_edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColorHighlight="@android:color/holo_green_dark"
                android:textColorLink="@android:color/holo_green_dark"
                android:textCursorDrawable="@android:color/holo_green_dark"
                android:textIsSelectable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/farm_txtOwner"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/farm_edtOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColorHighlight="@android:color/holo_green_dark"
                android:textColorLink="@android:color/holo_green_dark"
                android:textCursorDrawable="@android:color/holo_green_dark"
                android:textIsSelectable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/farm_txtAddress"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/farm_edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColorHighlight="@android:color/holo_green_dark"
                android:textColorLink="@android:color/holo_green_dark"
                android:textCursorDrawable="@android:color/holo_green_dark"
                android:textIsSelectable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/farm_txtState"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/farm_spinnerState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColorHighlight="@android:color/holo_green_dark"
                android:textColorLink="@android:color/holo_green_dark"
                android:textCursorDrawable="@android:color/holo_green_dark"
                android:textIsSelectable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/farm_txtCity"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/farm_spinnerCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColorHighlight="@android:color/holo_green_dark"
                android:textColorLink="@android:color/holo_green_dark"
                android:textCursorDrawable="@android:color/holo_green_dark"
                android:textIsSelectable="false" />



            <Button
                android:id="@+id/farm_btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/holo_green_dark"
                android:onClick="updateFarm"
                android:text="@string/farm_btnSave"
                android:textColor="#FFF"
                android:textStyle="bold" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>