<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="com.filipe.agricontrole.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:minHeight="112dp"
            app:srcCompat="@mipmap/agricontrole_logo_sem_fundo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_txtEmail"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textColorHighlight="@android:color/holo_green_dark"
            android:textColorLink="@android:color/holo_green_dark"
            android:textCursorDrawable="@android:color/holo_green_dark"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_txtPassword"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:inputType="textPassword"
            android:textColorHighlight="@android:color/holo_green_dark"
            android:textColorLink="@android:color/holo_green_dark"
            android:textCursorDrawable="@android:color/holo_green_dark" />

        <CheckBox
            android:id="@+id/login_ckbConected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:freezesText="false"
            android:text="@string/login_ckbConected"
            android:textColor="@android:color/background_dark"
            android:textColorHighlight="@android:color/holo_green_dark"
            android:textColorLink="@android:color/holo_green_dark"
            app:buttonTint="@android:color/holo_green_dark"
            tools:clickable="true" />

        <Button
            android:id="@+id/login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:onClick="logar"
            android:text="@string/login_btnLogin"
            android:textColor="#FFF"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
