<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:mask="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context="com.filipe.agricontrole.UpdateProductActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:minHeight="112dp"
                android:src="@mipmap/ic_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_txtName"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/product_edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColorHighlight="@android:color/holo_green_dark"
                android:textColorLink="@android:color/holo_green_dark"
                android:textCursorDrawable="@android:color/holo_green_dark"
                android:textIsSelectable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_txtQuantity"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/product_edtQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColorHighlight="@android:color/holo_green_dark"
                android:textColorLink="@android:color/holo_green_dark"
                android:textCursorDrawable="@android:color/holo_green_dark"
                android:textIsSelectable="false"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_txtExpirationDate"
                android:textStyle="bold" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/product_edtExpirationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColorHighlight="@android:color/holo_green_dark"
                android:textColorLink="@android:color/holo_green_dark"
                android:textCursorDrawable="@android:color/holo_green_dark"
                android:textIsSelectable="false"
                android:inputType="date"
                android:textColorHint="@color/gray_btn_bg_color"
                mask:allowed_chars="1234567890"
                mask:mask="##/##/####"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_txtCategory"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/product_spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColorHighlight="@android:color/holo_green_dark"
                android:textColorLink="@android:color/holo_green_dark"
                android:textCursorDrawable="@android:color/holo_green_dark"
                android:textIsSelectable="false" />

            <Button
                android:id="@+id/product_btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/holo_green_dark"
                android:onClick="updateProduct"
                android:text="@string/product_btnSave"
                android:textColor="#FFF"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>